# simulations

./: .gitignore
lotka_volterra/c++/: BoundaryConditions.cpp  BoundaryConditions.h  CMakeLists.txt  Hoffman.cpp  Hoffman.h  LVSimulation.cpp  LVSimulation.h  MakeevEtAl.cpp  MakeevEtAl.h  ShengTeuber.cpp  ShengTeuber.h  Timer.h  boundary_conditions.h  classes.h  main.cpp  test_boundary_conditions.cpp
lotka_volterra/js/: index.html  main.js
lotka_volterra/makeev_et_al/: boundary_conditions.h  classes.h  main.cpp  test_boundary_conditions.cpp
lotka_volterra/monte_carlo/: CMakeLists.txt  Makefile  classes.h  main.cpp
